# SIR-simulation

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  pyrightconfig.json  requirements.txt
bindings/: ssir.cpp
bindings/ssir/: __init__.pyi  disease.pyi  model.pyi  population.pyi
examples/: main.py  visualize.py  windows.py
include/: Disease.h  Person.h  Population.h  disease.h  model.h  person.h  population.h  utils.h
src/: Disease.cpp  Model.cpp  Utils.cpp  disease.cpp  model.cpp  person.cpp  population.cpp  utils.cpp
